🚧Customize Home page

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -1,7 +1,62 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="container-fluid mb-4">
+    <h1 class="display-3 text-center mb-3">My store</h1>
 
-Welcome to your new app.
+    <p class="text-center">
+        Welcome to Store For everythings About books. build beautiful single page application with
+        only C# like you use to do with ajax and JS
+    </p>
+</div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="container">
+    <!--Card zone menu-->
+    <div class="col justify-content-start">
+        <div class="card-body shadow-lg mb-2 row">
+            <div class="col-">
+                <img alt="..." src="/images/master.jpg" />
+            </div>
+            <div class="col-sm">
+                you can recieve from our expert mode , feedback ,comments , all you want to encrease
+                you own knowledge of mode.
+                <br />
+                <a href="" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
+            </div>
+        </div>
+        <div class="card-body shadow-lg mb-2 row">
+            <div class="col-">
+                <img alt="..." src="/images/girls.jpg" />
+            </div>
+            <div class="col-sm">
+                And you have to know that , everyone who came to our site to buy something
+                they found here too many thing 5to yake.
+                <br />
+                <a href="" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
+            </div>
+        </div>
+        <div class="card-body shadow-lg mb-2 row">
+            <div class="col-">
+                <img alt="..." src="/images/wo.jpg" />
+            </div>
+            <div class="col-sm">
+                Buy everythings you want for you there is more thing you
+                can buy , for girls only.
+                <br />
+                <a href="" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
+            </div>
+        </div>
+        <div class="card-body shadow-lg mb-2 row">
+            <div class="col-">
+                <img alt="..." src="/images/shopBag.jpg" />
+            </div>
+            <div class="col-sm justify-content-center">
+                <h4>Command &amp; Receive</h4>
+                you can also make a command and be served at your home, receiving your command.<br />
+
+                <a href="" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
