--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -18,7 +18,12 @@
             </li>
             <li class="nav-item">
                 <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-book" aria-hidden="true"></span> Fetch Datas
+                    <span class="oi oi-bar-chart" aria-hidden="true"></span> Data
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="aboutUs" Match="NavLinkMatch.Prefix">
+                    <span class="oi oi-box" aria-hidden="true"></span> About Us
                 </NavLink>
             </li>
         </ul>
