🚧Fix Routing Bug And Add Shopping Component

--- a/BlazorApp1/wwwroot/css/app.css
+++ b/BlazorApp1/wwwroot/css/app.css
@@ -179,5 +179,13 @@ app {
     .sidebar .collapse {*/
         /* Never collapse the sidebar for wide screens */
         /*display: block;
-    }
-}*/
+    }*/
+
+
+        .footer{
+            height:5px;
+        }
+        #head{
+            background-image:url("../images/wo.jpg");
+            
+        }
