--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -31,7 +31,7 @@
                 And you have to know that , everyone who came to our site to buy something
                 they found here too many thing 5to yake.
                 <br />
-                <a href="" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
+                <a href="about" class="btn btn-info mt-4"><span class="oi oi-eye">&nbsp;</span> View More</a>
             </div>
         </div>
         <div class="card-body shadow-lg mb-2 row">
