--- a/BlazorApp1/Shared/MainLayout.razor
+++ b/BlazorApp1/Shared/MainLayout.razor
@@ -5,10 +5,18 @@
 <div class="container-fluid mt-4">
     <main class="pb-3">
         @Body
-    </main>  
+    </main>
 </div>
 
-@*<footer class="py-3 bg-light text-center text-black-50">
-    &copy; Genesis Corporation -@DateTime.Now.Year 
-</footer>*@
+<!-- Footer -->
+<footer class="page-footer font-small blue" id="footer">
 
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">
+        © @DateTime.Now.Year Copyright:
+        Genesis 
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
