--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-lg shadow-lg p-3 mb-5 navbar-dark bg-dark">
-    <a class="navbar-brand" href="">Blazzor App1</a>
+    <a class="navbar-brand" href="">My Store</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,19 +11,24 @@
                     <span class="oi oi-home" aria-hidden="true"></span> Home
                 </NavLink>
             </li>
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <NavLink class="nav-link" href="counter">
-                    <span class="oi oi-calculator" aria-hidden="true"></span> Counter
+                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
                 </NavLink>
             </li>
             <li class="nav-item">
                 <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-bar-chart" aria-hidden="true"></span> Data
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                </NavLink>
+            </li>*@
+            <li class="nav-item">
+                <NavLink class="nav-link" href="shop">
+                    <span class="oi oi-cart" aria-hidden="true"></span> Shopping
                 </NavLink>
             </li>
             <li class="nav-item">
-                <NavLink class="nav-link" href="aboutUs" Match="NavLinkMatch.Prefix">
-                    <span class="oi oi-box" aria-hidden="true"></span> About Us
+                <NavLink class="nav-link" href="about">
+                    <span class="oi oi-info" aria-hidden="true"></span>
                 </NavLink>
             </li>
         </ul>
