--- a/BlazorApp1/Pages/Shop.razor
+++ b/BlazorApp1/Pages/Shop.razor
@@ -1,9 +1,114 @@
 ﻿@page "/shop"
 
-<div class="head">
+<div class="badge-info">
     <h3 class="display-3 text-center">Shop</h3>
+    @*<div class="container col- justify-content-center">
+            <p class="text-nowrap text-center">
+                here there many things that you can buy , more articles , shoes,t-shirt, skirt,trouses,
+                and yoou'll enjoy the variety of products that we provide to you ,<br />
+                make you choises then choose and buy easly and quickly than you've too say hallo.
+            </p>
+        </div>*@
+</div>
+
+<div class="d-flex p-lg-1">
+    <div class="dropdown mr-1">
+        <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            Wearing
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
+            <a class="dropdown-item" >Shoes</a>
+            <a class="dropdown-item" @onclick="ShowMenStyle">Mens</a>
+            <a class="dropdown-item" @onclick="showGirlsStyle">Girls</a>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid @vis2">
+    <h3 class="text-body"> Wearing > styles > Mens</h3>
+    <div class="row p-1">
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men1.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men2.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men3.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2 small">
+            <img src="/images/men4.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men5.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men6.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men7.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men8.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men9.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/men10.jpg" alt="..." />
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid @showGirls">
+    <h3 class="text-body"> Wearing > styles > Girls</h3>
+    <div class="row p-1">
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model1.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model2.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model3.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2 small">
+            <img src="/images/model4.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model5.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model6.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model7.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model8.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model9.jpg" alt="..." />
+        </div>
+        <div class="card-body shadow-lg mb-2">
+            <img src="/images/model10.jpg" alt="..." />
+        </div>
+    </div>
 </div>
 
 @code {
+    public string vis2 { get; set; }
+    public string showGirls { get; set; } = "d-none";
 
+    public void ShowMenStyle()
+    {
+        vis2 = null;
+        showGirls = "d-none";
+    }
+
+    public void showGirlsStyle()
+    {
+        showGirls = null;
+        vis2 = "d-none";
+    }
 }
