--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
             </li>
             <li class="nav-item">
                 <NavLink class="nav-link" href="about">
-                    <span class="oi oi-info" aria-hidden="true"></span>
+                    <span class="oi oi-info" aria-hidden="true"></span> About
                 </NavLink>
             </li>
         </ul>
