--- a/BlazorApp1/wwwroot/css/app.css
+++ b/BlazorApp1/wwwroot/css/app.css
@@ -189,3 +189,20 @@ app {
             background-image:url("../images/wo.jpg");
             
         }
+
+#loader-wrapper .loader-section {
+    position: fixed;
+    top: 0;
+    width: 51%;
+    height: 100%;
+    background: #222222;
+    z-index: 1000;
+}
+
+    #loader-wrapper .loader-section.section-left {
+        left: 0;
+    }
+
+    #loader-wrapper .loader-section.section-right {
+        right: 0;
+    }
